# sites_parser

./: README.md  pyproject.toml
files/: vacancies.json
models/: api_classes.py  saver_classes.py  vacancy_classes.py
src/: main.py  utils.py
