[tool.poetry]
name = "coursework-module4"
version = "0.1.0"
description = ""
authors = ["zakhar <grankin-zakhar@mail.ru>"]
readme = "README.md"
packages = [{include = "coursework_module4"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
